Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114037

[Android] Could not launch any app with Qt 3D module on Android 12

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.4, 6.6.1, 6.7.0 FF
    • 6.5.0
    • Qt3D
    • None
    • Google Pixel 3a 12.0
    • Android
    • a9a7de6af (dev), a035b2cb4 (6.6), f69bc2faa (6.5)
    • 2023wk36FOQtforAndroid, 2023wk38FOQtforAndroid, 2023wk40FOQtforAndroid

    Description

      Steps to reproduce:

      1. Open Qt Creator and open any 3d example https://doc.qt.io/qt-6/qt3d-examples.html 
      2. Build and try to run the example on Android. 

      Expected: The application is launched, 3d objects are visible. 

      Actual: The application is crashing on startup

      Reproducibility:  100%

       

      Error log:

      W libbasicshapes-cpp_arm64-v8a.so: Attempted to set unsupported sample count 4
      F libc    : Fatal signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 0x0 in tid 14295 (qtMainLoopThrea), pid 14274 (basicshapes_cpp)

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              taipan BogDan Vatra
              lkos Łukasz Kosiorowski
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes