Don't change RHI's default surface format version

Setting the defaut surface format version to 1, on Android, it creates GLESv1
contextes instead of GLESv2.

Fixes: QTBUG-114037
Fixes: QTBUG-114036
Change-Id: I42fb1781d74069de00ecc10e227c558013773da0
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
(cherry picked from commit a9a7de6af54b9e68d8bd904e9346e213a76cf8ea)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a035b2cb4cdd28086c19ac0864bd9fabf4439006)